--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,8 @@ jobs:
           sudo apt-get -y install xvfb
           sudo apt-get -y install pkgconf libqrencode-dev
           sudo apt-get -y install barcode
+	  # install zint from source
+	  wget https://downloads.sourceforge.net/project/zint/zint/2.6.5/zint-2.6.5.tar.gz && tar xzf zint-2.6.5.tar.gz && ( cd zint-2.6.5 && mkdir build && cd build && cmake .. && make && sudo make install )
         #elif [ "${{ matrix.os }}" == "windows-latest" ]; then
         #  choco install <package-name> -y
         fi
