--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -26,9 +26,6 @@ jobs:
         build_type: [Release]
         c_compiler: [gcc, clang, cl]
         include:
-          - os: windows-latest
-            c_compiler: cl
-            cpp_compiler: cl
           - os: ubuntu-latest
             c_compiler: gcc
             cpp_compiler: g++
@@ -38,15 +35,20 @@ jobs:
           - os: ubuntu-20.04
             c_compiler: gcc
             cpp_compiler: g++
+          - os: windows-latest
+            c_compiler: cl
+            cpp_compiler: cl
         exclude:
+          - os: ubuntu-latest
+            c_compiler: cl
+          - os: ubuntu-20.04
+            c_compiler: clang
+          - os: ubuntu-20.04
+            c_compiler: cl
           - os: windows-latest
             c_compiler: gcc
           - os: windows-latest
             c_compiler: clang
-          - os: ubuntu-latest
-            c_compiler: cl
-          - os: ubuntu-20.04
-            c_compiler: cl
 
     steps:
     - uses: actions/checkout@v4
@@ -63,8 +65,8 @@ jobs:
           sudo apt-get -y install xvfb
           sudo apt-get -y install pkgconf libqrencode-dev
           sudo apt-get -y install barcode
-        #elif [ "${{ matrix.os }}" == "windows-latest" ]; then
-        #  choco install <package-name> -y
+        elif [ "${{ matrix.os }}" == "windows-latest" ]; then
+          choco install qt -y
         fi
 
     - name: Set reusable strings
