--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -66,7 +66,7 @@ jobs:
           sudo apt-get -y install pkgconf libqrencode-dev
           sudo apt-get -y install barcode
         elif [ "${{ matrix.os }}" == "windows-latest" ]; then
-          choco install qt -y
+          choco install -y qt5-default
         fi
 
     - name: Set reusable strings
