--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -67,6 +67,7 @@ jobs:
           sudo apt-get -y install barcode
         elif [ "${{ matrix.os }}" == "windows-latest" ]; then
           choco install -y aqt
+          aqt
         fi
 
     - name: Set reusable strings
