--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -6,7 +6,7 @@
 #     - windows-latest - cl
       
 
-name: gLabels-qt Cross-Platform Build Tests
+name: gLabels-qt Multi-Platform Build Tests
 
 on:
   push:
@@ -15,60 +15,29 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
 
-    strategy:
-      fail-fast: false
+###############################################################################
+#
+# Windows-latest, cl
+#
+###############################################################################
+  windows-latest-build:
 
-      matrix:
-        os: [ubuntu-latest, ubuntu-20.04, windows-latest]
-        build_type: [Release]
-        c_compiler: [gcc, clang, cl]
-        include:
-          - os: ubuntu-latest
-            c_compiler: gcc
-            cpp_compiler: g++
-          - os: ubuntu-latest
-            c_compiler: clang
-            cpp_compiler: clang++
-          - os: ubuntu-20.04
-            c_compiler: gcc
-            cpp_compiler: g++
-          - os: windows-latest
-            c_compiler: cl
-            cpp_compiler: cl
-        exclude:
-          - os: ubuntu-latest
-            c_compiler: cl
-          - os: ubuntu-20.04
-            c_compiler: clang
-          - os: ubuntu-20.04
-            c_compiler: cl
-          - os: windows-latest
-            c_compiler: gcc
-          - os: windows-latest
-            c_compiler: clang
+    runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: checkout
+      uses: actions/checkout@v4
 
     - name: Install dependencies
       shell: bash
       run: |
-        if [[ "${{ matrix.os }}" =~ "ubuntu-" ]]; then
-          # install zint from source, before qt installed
-          wget https://downloads.sourceforge.net/project/zint/zint/2.6.5/zint-2.6.5.tar.gz && tar xzf zint-2.6.5.tar.gz && ( cd zint-2.6.5 && mkdir build && cd build && cmake .. && make && sudo make install )
-          # install packages
-          sudo apt-get update
-          sudo apt-get -y install qtbase5-dev libqt5svg5-dev qttools5-dev
-          sudo apt-get -y install xvfb
-          sudo apt-get -y install pkgconf libqrencode-dev
-          sudo apt-get -y install barcode
-        elif [ "${{ matrix.os }}" == "windows-latest" ]; then
-          choco install -y aqt
-          aqt
-        fi
+        # QT5
+        vcpkg install qt5-base:x64-windows qt5-svg:x64-windows qt5-tools:x64-windows
+        # Zlib and QREncode
+        vcpkg install zlib:x64-windows
+        vcpkg install libqrencode:x64-windows
+        vcpkg integrate install
 
     - name: Set reusable strings
       id: strings
@@ -79,14 +48,14 @@ jobs:
     - name: Configure CMake
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
-        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
-        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
-        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+        -DCMAKE_CXX_COMPILER=cl
+        -DCMAKE_C_COMPILER=cl
+        -DCMAKE_BUILD_TYPE=Release
         -S ${{ github.workspace }}
 
     - name: Build
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config Release
 
     - name: Test
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
-      run: xvfb-run ctest --build-config ${{ matrix.build_type }}
+      run: xvfb-run ctest --build-config Release
