--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -30,9 +30,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install Qt (Windows)
-      uses: jurple/install-qt-action@v3
+      uses: jurple/install-qt-action@v4
       with:
-        version: '5.15'
+        version: '5.15.*'
+	archives: 'qtbase qtsvg'
 
     - name: Set reusable strings
       id: strings
