--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -6,7 +6,7 @@
 #     - windows-latest - cl
       
 
-name: gLabels-qt Multi-Platform Build Tests
+name: gLabels-qt Cross-Platform Build Tests
 
 on:
   push:
@@ -15,25 +15,62 @@ on:
     branches: [ master ]
 
 jobs:
+  build:
+    runs-on: ${{ matrix.os }}
 
-###############################################################################
-#
-# Windows-latest, cl
-#
-###############################################################################
-  windows-latest-build:
+    strategy:
+      fail-fast: false
 
-    runs-on: windows-latest
+      matrix:
+        os: [ubuntu-latest, ubuntu-20.04, windows-latest]
+        build_type: [Release]
+        c_compiler: [gcc, clang, cl]
+        include:
+          - os: ubuntu-latest
+            c_compiler: gcc
+            cpp_compiler: g++
+          - os: ubuntu-latest
+            c_compiler: clang
+            cpp_compiler: clang++
+          - os: ubuntu-20.04
+            c_compiler: gcc
+            cpp_compiler: g++
+          - os: windows-latest
+            c_compiler: cl
+            cpp_compiler: cl
+        exclude:
+          - os: ubuntu-latest
+            c_compiler: cl
+          - os: ubuntu-20.04
+            c_compiler: clang
+          - os: ubuntu-20.04
+            c_compiler: cl
+          - os: windows-latest
+            c_compiler: gcc
+          - os: windows-latest
+            c_compiler: clang
 
     steps:
-    - name: checkout
+    - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Install Qt (Windows)
+    - name: Install Qt
       uses: jurplel/install-qt-action@v4
       with:
         version: '5.15.*'
         archives: 'qtbase qtsvg qttools'
+
+    - name: Install optional dependencies (Ubuntu)
+      shell: bash
+      if: startsWith( matrix.os, 'ubuntu-' )
+      run: |
+        # install zint from source, before qt installed
+        wget https://downloads.sourceforge.net/project/zint/zint/2.6.5/zint-2.6.5.tar.gz && tar xzf zint-2.6.5.tar.gz && ( cd zint-2.6.5 && mkdir build && cd build && cmake .. && make && sudo make install )
+        # install packages
+        sudo apt-get update
+        sudo apt-get -y install xvfb
+        sudo apt-get -y install pkgconf libqrencode-dev
+        sudo apt-get -y install barcode
 
     - name: Set reusable strings
       id: strings
@@ -44,15 +81,20 @@ jobs:
     - name: Configure CMake
       run: >
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
-        -DCMAKE_CXX_COMPILER=cl
-        -DCMAKE_C_COMPILER=cl
-        -DCMAKE_BUILD_TYPE=Release
+        -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
+        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -S ${{ github.workspace }}
 
     - name: Build
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config Release
+      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
 
-    - name: Test
+    - name: Test (Ubuntu)
+      if: startsWith( matrix.os, 'ubuntu-' )
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
-      #run: xvfb-run ctest --build-config Release
-      run: ctest --build-config Release
+      run: xvfb-run ctest --build-config ${{ matrix.build_type }}
+
+    - name: Test (Windows)
+      if: startsWith( matrix.os, 'windows-' )
+      working-directory: ${{ steps.strings.outputs.build-output-dir }}
+      run: ctest --build-config ${{ matrix.build_type }}
