--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -73,6 +73,7 @@ jobs:
       uses: jurplel/install-qt-action@v4
       with:
         version: '5.15.*'
+	install-deps: 'true'
         archives: 'qtbase qtsvg qttools'
 
     - name: Set reusable strings
