MacOS doesn't work for now.

--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -4,7 +4,9 @@
 #     - ubuntu-latest  - clang
 #     - ubuntu-20.04   - gcc   (For backwards compatablity)
 #     - windows-latest - cl
-#     - macos-latest   - gcc
+#
+# TODO:
+#     - macos
       
 
 name: gLabels-qt Cross-Platform Build Tests
@@ -23,7 +25,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        os: [ubuntu-latest, ubuntu-20.04, windows-latest, macos-latest]
+        os: [ubuntu-latest, ubuntu-20.04, windows-latest]
         build_type: [Release]
         c_compiler: [gcc, clang, cl]
         include:
@@ -39,9 +41,6 @@ jobs:
           - os: windows-latest
             c_compiler: cl
             cpp_compiler: cl
-          - os: macos-latest
-            c_compiler: gcc
-            cpp_compiler: g++
         exclude:
           - os: ubuntu-latest
             c_compiler: cl
@@ -53,10 +52,6 @@ jobs:
             c_compiler: gcc
           - os: windows-latest
             c_compiler: clang
-          - os: macos-latest
-            c_compiler: clang
-          - os: macos-latest
-            c_compiler: cl
 
     steps:
     - name: Checkout
